# backend_webapp

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Backend_ARCHITECTURE_ANALYSIS.md  Makefile  QUICK_START_CI.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI_UPDATES.md  ci.yml  quick-check.yml  security.yml
.kiro/specs/frontend-backend-integration/: requirements.md
alembic/: env.py
alembic/versions/: 82b90617ee73_initial_schema.py
app/: __init__.py  config.py  database.py  main.py
app/api/: alerts.py  fl_status.py  mitre.py  predictions.py  test_events.py  websocket.py
app/events/: emitter.py
app/models/: __init__.py  alert.py  fl_round.py  mitre.py  network_data.py  prediction.py
app/neo4j/: __init__.py  neo4j_db.py
app/repositories/: __init__.py  alert_repository.py  fl_repository.py  prediction_repository.py
app/schemas/: __init__.py  alert.py  fl_status.py  prediction.py
app/websocket/: manager.py
docs/: API_TESTING_GUIDE.md  API_WEBAPP_ALIGNMENT.md  ARCHITECTURE.md  BACKEND_API_ARCHITECTURE.md  CI_CD.md  CI_CHECKLIST.md  CI_FIXES_APPLIED.md  CI_PIPELINE_CREATED.md  CI_SETUP.md  CI_SUMMARY.md  DOCKER_SETUP.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_STEPS.md  MYPY_FIXES_APPLIED.md  PROGRESS.md  QUICK_START.md  SETUP.md  STATUS.md  TDD_STATUS.md
scripts/: clear_database.py  clear_fl_data.py  import_mitre_data.py  seed_database.py  setup_postgres.sh  setup_test_db.sh  test_api.sh  test_attack_graph.py  test_fl_websocket.py  test_repositories.py
tests/: conftest.py
tests/test_api/: test_alerts.py  test_alerts_websocket.py  test_fl_status.py  test_mitre.py  test_predictions.py
tests/test_websocket/: test_connection_manager.py  test_events.py  test_websocket_endpoint.py
